--- a/find_all_here/find_all_here/Views/AddProductView.xaml
+++ b/find_all_here/find_all_here/Views/AddProductView.xaml
@@ -8,7 +8,10 @@
         <StackLayout Orientation="Vertical" Margin="20,15,20,20">
             <Label Text="Fotografías" FontSize="Large"/>
             <Frame Padding="1" HeightRequest="0" BackgroundColor="White"/>
+            <Image
+                x:Name="image1"></Image>
             <ImageButton 
+                    Clicked="ImageButton_Clicked"
                     Source="plus"
                     WidthRequest="10"
                     HeightRequest="200"
