--- a/find_all_here/find_all_here/Views/HomeView.xaml
+++ b/find_all_here/find_all_here/Views/HomeView.xaml
@@ -49,7 +49,14 @@
                                             </FormattedString>
                                         </Label.FormattedText>
                                         <Label.GestureRecognizers>
-                                            <TapGestureRecognizer x:DataType="local:HomeViewModel" Command="{Binding OpenUserProfileCommand}" />
+                                            <TapGestureRecognizer
+                                                x:DataType="local:HomeViewModel"
+                                                Command="{Binding Source={
+                                                    RelativeSource AncestorType={
+                                                        x:Type local:HomeViewModel
+                                                    }
+                                                }, Path=OpenUserProfileCommand}"
+                                                CommandParameter="{Binding .}"/>
                                         </Label.GestureRecognizers>
                                     </Label>
                                 </Frame>
