--- a/find_all_here/find_all_here/Views/ProfileView.xaml
+++ b/find_all_here/find_all_here/Views/ProfileView.xaml
@@ -2,75 +2,180 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="find_all_here.ProfileView"
-             Title="PERFIL">
-    <StackLayout BackgroundColor="#111111">
-        <ScrollView VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-            <StackLayout>
-                <ImageButton 
-                    Source=""
-                    WidthRequest="125" HeightRequest="125" HorizontalOptions="Center"
-                    Margin="0,80,0,0" CornerRadius="250" 
-                    BackgroundColor="#333333"/>
-                <Label Text="@username" HorizontalOptions="Center"
-                    Margin="0,10,0,0" FontSize="14"
-                    TextColor="#ffffff" FontAttributes="Bold"/>
-                <Grid Margin="0" Padding="0" HorizontalOptions="Center">
-                    <Grid.RowDefinitions>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <Label Text="★★★★☆"
-                        TextColor="#F1C40F"
-                        HorizontalOptions="End"/>
-                    <Label Grid.Column="1"
-                        VerticalOptions="Center"
-                        HorizontalOptions="Start"
-                        TextColor="#999999" FontSize="12"
-                        Text="(4.5M)"/>
-                </Grid>
+             Title="Perfil de usuario">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Name="Configuración de usuario" Icon="settings.png" Activated="OnConfigUserClicked" />
+        <ToolbarItem Name="Cerrar sesión" Icon="logout.png" Activated="OnLogOutClicked"/>
+    </ContentPage.ToolbarItems>
+
+    <ScrollView
+        VerticalOptions="FillAndExpand"
+        HorizontalOptions="FillAndExpand"
+        BackgroundColor="{StaticResource bg-body}">
+        <StackLayout>
+
+            <Grid
+                Margin="0"
+                Padding="20"
+                RowSpacing="0"
+                BackgroundColor="{StaticResource bg-container}"
+                HorizontalOptions="FillAndExpand">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <ImageButton
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Grid.RowSpan="3"
+                    Margin="0"
+                    Source="{Binding Profile_mini}"
+                    BackgroundColor="{StaticResource bg-outline}"
+                    WidthRequest="100"
+                    HeightRequest="100"
+                    CornerRadius="50" />
+                <Label
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Grid.ColumnSpan="2"
+                    Margin="0"
+                    Padding="20,5"
+                    LineBreakMode="TailTruncation"
+                    FontSize="20"
+                    VerticalTextAlignment="Center"
+                    TextColor="{StaticResource lbl-primary}">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <FormattedString.Spans>
+                                <Span Text="{Binding Names}"/>
+                                <Span Text=" "/>
+                                <Span Text="{Binding Surnames}"/>
+                            </FormattedString.Spans>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+                <Label
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Margin="0"
+                    Padding="20,5"
+                    LineBreakMode="TailTruncation"
+                    FontSize="14"
+                    TextColor="{StaticResource lbl-secondary}"
+                    VerticalTextAlignment="Center">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <FormattedString.Spans>
+                                <Span Text="@"/>
+                                <Span Text="{Binding Username}"/>
+                            </FormattedString.Spans>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
                 <Frame
-                    CornerRadius="7.5"
+                    Grid.Row="1"
+                    Grid.Column="2"
+                    CornerRadius="10"
                     Padding="0"
                     BackgroundColor="#2196F3"
-                    HorizontalOptions="Center"
-                    Margin="0,5,0,0" 
+                    HorizontalOptions="Start"
+                    Margin="0" 
+                    IsVisible="false"
                     HasShadow="True">
-                    <!--
-                    <Label  Text="Editar perfil" TextColor="#fff"
+                    <Label  Text="Seguir" TextColor="#fff"
                         Padding="10,5" FontSize="12" FontAttributes="Bold"
-                        HorizontalOptions="Center">
+                        HorizontalOptions="Center" VerticalOptions="Center">
                         <Label.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding ForgotPasswordCommand}" />
+                            <TapGestureRecognizer Command="{Binding UserFollowCommand}"/>
                         </Label.GestureRecognizers>
-                    </Label>-->
-                    <Button Text="Editar perfil" BackgroundColor="#2196F3" TextColor="#fff" FontSize="12" FontAttributes="Bold"
-                            HorizontalOptions="Center" Clicked="Ir"/>
-                    
+                    </Label>
+                </Frame>
+                <Label
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Margin="0"
+                    Padding="20,5"
+                    Text="★★★★☆"
+                    FontSize="14"
+                    TextColor="#F1C40F"
+                    FontAttributes="Bold"
+                    VerticalTextAlignment="Center"/>
+                <Label
+                    Grid.Row="2"
+                    Grid.Column="2"
+                    Margin="0"
+                    Text="(4.5M)"
+                    VerticalTextAlignment="Center"
+                    HorizontalTextAlignment="Start"/>
+            </Grid>
+            <Grid
+                Margin="2.5,0"
+                Padding="0"
+                RowSpacing="0"
+                HorizontalOptions="FillAndExpand">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <Frame
+                    Grid.Column="0"
+                    CornerRadius="5"
+                    Padding="0"
+                    BackgroundColor="{StaticResource btn-primary-outline}"
+                    HorizontalOptions="FillAndExpand"
+                    Margin="2.5,0"
+                    HasShadow="True">
+                    <Label  Text="Mis productos" TextColor="{StaticResource btn-primary}"
+                        FontAttributes="Bold"
+                        FontSize="14" Padding="10"
+                        HorizontalTextAlignment="Center">
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer />
+                        </Label.GestureRecognizers>
+                    </Label>
                 </Frame>
                 <Frame
-                    CornerRadius="7.5"
+                    Grid.Column="1"
+                    CornerRadius="5"
                     Padding="0"
-                    BackgroundColor="#2196F3"
-                    HorizontalOptions="Center"
-                    Margin="0,5,0,0" 
+                    BackgroundColor="{StaticResource bg-container}"
+                    HorizontalOptions="FillAndExpand"
+                    Margin="2.5,0"
                     HasShadow="True">
-                    <!--
-                    <Label  Text="Editar perfil" TextColor="#fff"
-                        Padding="10,5" FontSize="12" FontAttributes="Bold"
-                        HorizontalOptions="Center">
+                    <Label  Text="Mis ventas" TextColor="{StaticResource lbl-outline}"
+                        FontAttributes="Bold"
+                        FontSize="14" Padding="10"
+                        HorizontalTextAlignment="Center">
                         <Label.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding ForgotPasswordCommand}" />
+                            <TapGestureRecognizer/>
                         </Label.GestureRecognizers>
-                    </Label>-->
-                    <Button Text="Cerrar Sesion" BackgroundColor="#2196F3" TextColor="#fff" FontSize="12" FontAttributes="Bold"
-                            HorizontalOptions="Center" Clicked="Logout_btn"/>
-                    
+                    </Label>
                 </Frame>
-              
-            </StackLayout>
-        </ScrollView>
-    </StackLayout>
+                <Frame
+                    Grid.Column="2"
+                    CornerRadius="5"
+                    Padding="0"
+                    BackgroundColor="{StaticResource bg-container}"
+                    HorizontalOptions="FillAndExpand"
+                    Margin="2.5,0"
+                    HasShadow="True">
+                    <Label  Text="Mis compras" TextColor="{StaticResource lbl-outline}"
+                        FontAttributes="Bold"
+                        FontSize="14" Padding="10"
+                        HorizontalTextAlignment="Center">
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer />
+                        </Label.GestureRecognizers>
+                    </Label>
+                </Frame>
+            </Grid>
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
