--- a/find_all_here/find_all_here/Views/PagoView.xaml
+++ b/find_all_here/find_all_here/Views/PagoView.xaml
@@ -1,46 +1,119 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="find_all_here.PagoView">
-    
-    <StackLayout BackgroundColor="Black">
-        <Grid
-            RowSpacing="0"
-            Margin="0"
-            Padding="10"
-            Background="{StaticResource bg-outline}">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            <Label 
-                Grid.Column="1"
-                TextColor="{StaticResource lbl-primary}"
-                Text="Carrito de compras"
-                FontSize="24"/>
-            <Frame
-                Grid.Column="0"
-                CornerRadius="7.5"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Class="find_all_here.PagoView">
+
+    <ScrollView
+        BackgroundColor="{StaticResource bg-container}">
+        <StackLayout
+            VerticalOptions="CenterAndExpand">
+            <ImageButton
+                Margin="20, 60, 20, 20"
                 Padding="0"
-                BackgroundColor="{StaticResource btn-primary-outline}"
-                HorizontalOptions="Center"
+                Background="Transparent"
+                BorderColor="Transparent"
+                WidthRequest="150"
+                HeightRequest="150"
+                CornerRadius="75"
                 VerticalOptions="Center"
-                Margin="0,5,0,0" 
+                HorizontalOptions="Center"
+                Source="https://scriptperu.com/find_all_here/image/user/2/mini/asd"/>
+            <Label
+                FontSize="20"
+                Text="Hola, Carlos Manuel"
+                TextColor="{StaticResource lbl-primary}"
+                HorizontalTextAlignment="Center"/>
+            <Label
+                FontSize="14"
+                Text="Este es tu resumen de pago"
+                TextColor="{StaticResource lbl-secondary}"
+                HorizontalTextAlignment="Center"/>
+
+            <Frame
+                Margin="40,40,40,20"
+                Background="{StaticResource bg-outline}">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Label
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        FontSize="16"
+                        Text="Subtotal"
+                        TextColor="{StaticResource lbl-secondary}"/>
+                    <Label
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        FontSize="16"
+                        Text="S/120.00"
+                        HorizontalTextAlignment="End"
+                        TextColor="{StaticResource lbl-primary}"/>
+                    <Label
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        FontSize="16"
+                        Text="IGV (18%)"
+                        TextColor="{StaticResource lbl-secondary}"/>
+                    <Label
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        FontSize="16"
+                        Text="S/12.00"
+                        HorizontalTextAlignment="End"
+                        TextColor="{StaticResource lbl-primary}"/>
+                    <Frame
+                        Grid.Row="2"
+                        Grid.Column="0"
+                        Grid.ColumnSpan="2"
+                        Margin="10"
+                        Padding="1"
+                        Background="{StaticResource bg-profile}"/>
+                    <Label
+                        Grid.Row="3"
+                        Grid.Column="0"
+                        FontSize="20"
+                        Text="Total a pagar"
+                        FontAttributes="Bold"
+                        TextColor="{StaticResource lbl-secondary}"/>
+                    <Label
+                        Grid.Row="3"
+                        Grid.Column="1"
+                        FontSize="20"
+                        Text="S/132.00"
+                        FontAttributes="Bold"
+                        HorizontalTextAlignment="End"
+                        TextColor="{StaticResource lbl-primary}"/>
+                </Grid>
+            </Frame>
+            <Frame
+                Grid.Row="1"
+                Grid.Column="2"
+                CornerRadius="5"
+                Padding="12,6"
+                BackgroundColor="{StaticResource btn-success-outline}"
+                HorizontalOptions="Center"
+                Margin="0,0,0,40"
                 HasShadow="True">
-                <Label  Text="Seguir comprando" TextColor="{StaticResource btn-primary}"
-                    Padding="10,5" FontSize="12" FontAttributes="Bold"
-                    HorizontalOptions="Center">
+                <Label  Text="Registrar compra" TextColor="{StaticResource btn-success}"
+                    Padding="10,5" FontSize="18" FontAttributes="Bold"
+                    HorizontalOptions="Center" VerticalOptions="Center">
                     <Label.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding CloseCartCommand}" />
+                        <TapGestureRecognizer/>
                     </Label.GestureRecognizers>
                 </Label>
             </Frame>
-        </Grid>
+        </StackLayout>
+    </ScrollView>
+    
+    <!--StackLayout BackgroundColor="{StaticResource bg-body}">
         <Grid>
-            
             <Image Source="superyape" Margin="60,30,30,410" VerticalOptions="Center" HorizontalOptions="Center"/>
             
             <StackLayout Padding="0" Margin="20,190,20,0" HorizontalOptions="FillAndExpand">
@@ -94,5 +167,5 @@
                 </Frame>
             </StackLayout>
         </Grid>
-    </StackLayout>
+    </StackLayout-->
 </ContentPage>
